# src/routes/index.js
@@ -1,13 +1,12 @@
 const express = require('express');
 const router = express.Router();
 
-const healthRoutes = require('./healthRoutes');
-const loadRoutes = require('./loadRoutes');
 const authRoutes = require('./authRoutes');
 const userRoutes = require('./userRoutes');
+const healthRoutes = require('./healthRoutes');
 
-router.use('/', healthRoutes);
-router.use('/load', loadRoutes);
+router.use('/health', healthRoutes);
+
 router.use('/auth', authRoutes);
 router.use('/users', userRoutes);
 
